# crawler-playwright

./: .env.example  .gitignore  AGENTS.md  QWEN.md  environment.md  pyproject.toml
character-recognition/: b站爬虫.txt  crawler-bilibili2.py  main.py
ranking-metadata/: douban-top250.html  douban-workflow.md  douban.py  manyan-top100.html  maoyan-detail.html  maoyan-workflow.md  maoyan.py
simple-captcha/: login请求头.txt  main.py  ocr识别.txt  元素.txt  目标.txt  负载.txt
slider-captcha/: README.md  dangdang_slide.py  jd_slide.py  main.py  requirements.txt  workflow.md
slider-captcha/ref/: dangdang_login.py  jd_slide_login.py
video-crawling/: benchmark.py  bpfun-benchmark.py  bpfun-coruntine.py  bpfun-multi-processor.py  main.py  quick-benchmark.py  workflow.md  要求.md
video-crawling/page/: http.md  vedio.html
video-crawling/page/bpfun1/: http.txt  要求.md
video-crawling/page/bpfun2/: http.txt  要求.md
